--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <button>Haceme click</button>
+    <a href="https://www.google.com
+    "><img src="https://picsum.photos/200/300
+    " alt="No funciona"/>
+    </a>
+    <img src="https://picsum.photos/200/300
+    " alt="No funciona"/>
+    <label for="Nombre">Nombre</label>
+        <input id="Nombre" type="text" name="Nombre" placeholder="Ingrese su nombre"/>
+        
 </body>
 </html>
